--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/BusGuide.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.GMapsFX-2.11.0.jar=C:\\Users\\elvis\\Desktop\\AJP\\Assignment\\GmapsFX\\GMapsFX-2.11.0.jar
+file.reference.GMapsFX-2.11.0.jar=GMapsFX-2.11.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
