--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/BusGuide.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.12.jar=controlsfx-8.40.12.jar
 file.reference.GMapsFX-2.11.0.jar=GMapsFX-2.11.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -36,7 +37,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.GMapsFX-2.11.0.jar}
+    ${file.reference.GMapsFX-2.11.0.jar}:\
+    ${file.reference.controlsfx-8.40.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
